--- a/FoodDeliveryAdminApp/FoodDeliveryAdminApp/FoodDeliveryAdminApp.csproj
+++ b/FoodDeliveryAdminApp/FoodDeliveryAdminApp/FoodDeliveryAdminApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
   </ItemGroup>
 
