--- a/FoodDeliveryAdminApp/FoodDeliveryAdminApp/FoodDeliveryAdminApp.csproj
+++ b/FoodDeliveryAdminApp/FoodDeliveryAdminApp/FoodDeliveryAdminApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.104.2" />
+    <PackageReference Include="GemBox.Document" Version="35.0.1946" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
   </ItemGroup>
 
