--- a/FoodDeliveryApp/FoodDelivery.Web/FoodDelivery.Web.csproj
+++ b/FoodDeliveryApp/FoodDelivery.Web/FoodDelivery.Web.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\FoodDelivery.Service\FoodDelivery.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
