--- a/FoodDeliveryApp/FoodDelivery.Service/FoodDelivery.Service.csproj
+++ b/FoodDeliveryApp/FoodDelivery.Service/FoodDelivery.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FoodDelivery.Domain\FoodDelivery.Domain.csproj" />
     <ProjectReference Include="..\FoodDelivery.Repository\FoodDelivery.Repository.csproj" />
   </ItemGroup>
