--- a/FoodDeliveryApp/FoodDelivery.Web/appsettings.json
+++ b/FoodDeliveryApp/FoodDelivery.Web/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDeliveryDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDelivery.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDelivery.Web;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "PostgresConnection": "Host=pawprint.postgres.database.azure.com;Port=5432;Database=pawprint;Username=pawprintuser;Password=Kfnim5JnHBEv3d;SSL Mode=Require;Trust Server Certificate=true;"
   },
   "Logging": {
     "LogLevel": {
