Fix partner group database publish problem

--- a/FoodDeliveryApp/FoodDelivery.Web/appsettings.json
+++ b/FoodDeliveryApp/FoodDelivery.Web/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDeliveryDb;Trusted_Connection=True;MultipleActiveResultSets=true",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodDelivery.Web;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "PostgresConnection": "Host=pawprint.postgres.database.azure.com;Port=5432;Database=pawprint;Username=pawprintuser;Password=Kfnim5JnHBEv3d;SSL Mode=Require;Trust Server Certificate=true;"
+    "PostgresConnection": "Host=pawprint.postgres.database.azure.com;Port=5432;Database=pawprint;Username=pawprintuser;Password=89QNjkL73iLR3C42w26J;SSL Mode=Require;Trust Server Certificate=true;"
   },
   "Logging": {
     "LogLevel": {
